include pdf button in docs

--- a/layouts/partials/docs_layout.html
+++ b/layouts/partials/docs_layout.html
@@ -25,6 +25,8 @@
         <div class="docs-article-container">
           <h1 itemprop="name">{{ .Title }}</h1>
 
+          {{ partial "page_links_div.html" . }}
+          
           <div class="article-style" itemprop="articleBody">
             {{ .Content }}
           </div>
